--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilo.css">
     <title>Inicio</title>
-
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <div>
         <h3 class="cabezal"> VIAJEMOS JUNTOS </h3>
     </div>
 
     <div>
-        <img class="centrado" src="assets/img/LOGORecurso 1.png" height="130" alt="">
+        <img class="animate__animated animate__heartBeat" src="assets/img/LOGORecurso 1.png" height="130" alt="logo">
     </div>
 </head>
 
-<body>
+<br>
 
     <nav class="barraNav">
         <li class="pad10"><a class="inicio" href="#">INICIO</a> </li>
@@ -57,7 +59,8 @@
             </h3>
         </div>
     </main>
-    
+    <br>
+    </br>
 
     <!-- FOOTER -->
     <footer>
@@ -66,12 +69,10 @@
             <li class="redesFooter">
                 <IMG class="facebook" src="assets/img/facebook (1).png" height="30px"></IMG>
                 <IMG class="Instagram" src="assets/img/camara.png" height="30px"></IMG>
-
             </li>
 
             <h4>Maria Paz Navarro © Todos los derechos reservados</h4>
         </div>
     </footer>
 </body>
-
 </html>
